kustomize/apps/vms/push1st/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: push1st
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: push1st
  namespace: vms
spec:
  ports:
    - name: api
      port: 6002
      protocol: TCP
      targetPort: api
    - name: server
      port: 6003
      protocol: TCP
      targetPort: server
  selector:
    app.kubernetes.io/name: push1st
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
