kustomize/apps/vms/push1st/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: push1st
  namespace: vms
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`example.com`) && PathPrefix(`/pusher`)
    middlewares:
    - name: upgrade-insecure-requests
    services:
    - kind: Service
      name: push1st
      port: 6003
      scheme: http
